--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -1,9 +1,9 @@
 name: Data
 
-on:
-  workflow_dispatch:
-  schedule:
-    - cron: "*/5 * * * *"
+# on:
+#   workflow_dispatch:
+#   schedule:
+#     - cron: "*/5 * * * *"
   
 jobs:
   update:
